# backtesting-project

quant_backtester/: .gitignore  CMakeLists.txt  README.md
quant_backtester/.github/workflows/: ci.yml
quant_backtester/cmake/: QuantBacktesterConfig.cmake.in
quant_backtester/configs/experiments/: csv_demo_experiment.json  default_experiment.json
quant_backtester/configs/experiments/20260509_230619_2449/: events.csv  report.txt
quant_backtester/configs/experiments/20260510_221704_7549/: events.csv  report.txt
quant_backtester/configs/experiments/20260516_205008_3540/: events.csv
quant_backtester/data/: README.md  sample_prices.csv
quant_backtester/include/quant/analytics/: performance_metrics.h  report_generator.h
quant_backtester/include/quant/core/: clock.h  engine.h  experiment_config.h  types.h
quant_backtester/include/quant/data/: data_feed.h  data_loader.h  data_normalizer.h
quant_backtester/include/quant/events/: event.h  event_queue.h  fill_event.h  market_event.h  order_event.h  signal_event.h
quant_backtester/include/quant/execution/: execution_engine.h  fill_simulator.h  order_generator.h  order_manager.h  order_router.h  signal_handler.h  slippage_model.h  transaction_cost.h
quant_backtester/include/quant/portfolio/: multi_portfolio.h  portfolio.h  position_tracker.h  risk_manager.h
quant_backtester/include/quant/strategy/: mean_reversion.h  moving_average.h  strategy_base.h
quant_backtester/include/quant/utils/: event_logger.h  logger.h  math_helpers.h  replay_engine.h  run_context.h  timer.h
quant_backtester/install/include/quant/analytics/: performance_metrics.h
quant_backtester/install/include/quant/core/: walk_forward.h
quant_backtester/install/include/quant/data/: data_feed.h  data_normalizer.h
quant_backtester/install/include/quant/events/: event_queue.h  signal_event.h
quant_backtester/install/include/quant/execution/: execution_engine.h  order_manager.h  slippage_model.h  transaction_cost.h
quant_backtester/install/include/quant/portfolio/: pnl_calculator.h  portfolio.h
quant_backtester/install/include/quant/strategy/: donchian_breakout.h  mean_reversion.h  moving_average.h
quant_backtester/install/include/quant/utils/: math_helpers.h  timer.h
quant_backtester/install/lib/cmake/QuantBacktester/: QuantBacktesterConfig.cmake  QuantBacktesterTargets-release.cmake  QuantBacktesterTargets.cmake
quant_backtester/scripts/: demo.ps1  demo.sh  run_experiment.ps1  run_experiment.sh
quant_backtester/src/: CMakeLists.txt  main.cpp
quant_backtester/src/analytics/: advanced_metrics.cpp  drawdown.cpp  report_generator.cpp  sharpe_ratio.cpp
quant_backtester/src/core/: engine.cpp  experiment_config.cpp  walk_forward.cpp
quant_backtester/src/data/: csv_reader.cpp  data_feed.cpp  data_loader.cpp  data_normalizer.cpp
quant_backtester/src/execution/: execution_engine.cpp  fill_simulator.cpp  order_generator.cpp  order_manager.cpp  order_router.cpp  signal_handler.cpp  slippage_model.cpp  transaction_cost.cpp
quant_backtester/src/portfolio/: multi_portfolio.cpp  pnl_calculator.cpp  portfolio.cpp  position_tracker.cpp  risk_manager.cpp
quant_backtester/src/strategy/: donchian_breakout.cpp  mean_reversion.cpp  moving_average.cpp
quant_backtester/src/utils/: event_logger.cpp  logger.cpp  replay_engine.cpp  run_context.cpp
quant_backtester/tests/: CMakeLists.txt
quant_backtester/tests/integration/: test_full_backtest.cpp  test_replay_determinism.cpp
quant_backtester/tests/unit/: test_advanced_metrics.cpp  test_data_loader.cpp  test_data_normalizer.cpp  test_donchian_strategy.cpp  test_event_queue.cpp  test_execution_partial_fills.cpp  test_experiment_config.cpp  test_mean_reversion.cpp  test_multi_portfolio.cpp  test_oms_pipeline.cpp  test_performance_metrics.cpp  test_pnl_calculator.cpp  test_portfolio.cpp  test_position_tracker.cpp  test_risk_manager.cpp  test_walk_forward.cpp
