set(CATCH2_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/third_party/catch2")

add_executable(test_event_queue unit/test_event_queue.cpp)
target_include_directories(test_event_queue PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_event_queue PRIVATE quant_backtester_lib)
add_test(NAME test_event_queue COMMAND test_event_queue)

add_executable(test_data_normalizer unit/test_data_normalizer.cpp)
target_include_directories(test_data_normalizer PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_data_normalizer PRIVATE quant_backtester_lib)
add_test(NAME test_data_normalizer COMMAND test_data_normalizer)

add_executable(test_data_loader unit/test_data_loader.cpp)
target_include_directories(test_data_loader PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_data_loader PRIVATE quant_backtester_lib)
add_test(NAME test_data_loader COMMAND test_data_loader)

add_executable(test_execution_partial_fills unit/test_execution_partial_fills.cpp)
target_include_directories(test_execution_partial_fills PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_execution_partial_fills PRIVATE quant_backtester_lib)
add_test(NAME test_execution_partial_fills COMMAND test_execution_partial_fills)

add_executable(test_oms_pipeline unit/test_oms_pipeline.cpp)
target_include_directories(test_oms_pipeline PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_oms_pipeline PRIVATE quant_backtester_lib)
add_test(NAME test_oms_pipeline COMMAND test_oms_pipeline)

add_executable(test_performance_metrics unit/test_performance_metrics.cpp)
target_include_directories(test_performance_metrics PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_performance_metrics PRIVATE quant_backtester_lib)
add_test(NAME test_performance_metrics COMMAND test_performance_metrics)

add_executable(test_advanced_metrics unit/test_advanced_metrics.cpp)
target_include_directories(test_advanced_metrics PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_advanced_metrics PRIVATE quant_backtester_lib)
add_test(NAME test_advanced_metrics COMMAND test_advanced_metrics)

add_executable(test_portfolio unit/test_portfolio.cpp)
target_include_directories(test_portfolio PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_portfolio PRIVATE quant_backtester_lib)
add_test(NAME test_portfolio COMMAND test_portfolio)

add_executable(test_position_tracker unit/test_position_tracker.cpp)
target_include_directories(test_position_tracker PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_position_tracker PRIVATE quant_backtester_lib)
add_test(NAME test_position_tracker COMMAND test_position_tracker)

add_executable(test_risk_manager unit/test_risk_manager.cpp)
target_include_directories(test_risk_manager PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_risk_manager PRIVATE quant_backtester_lib)
add_test(NAME test_risk_manager COMMAND test_risk_manager)

add_executable(test_pnl_calculator unit/test_pnl_calculator.cpp)
target_include_directories(test_pnl_calculator PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_pnl_calculator PRIVATE quant_backtester_lib)
add_test(NAME test_pnl_calculator COMMAND test_pnl_calculator)

add_executable(test_multi_portfolio unit/test_multi_portfolio.cpp)
target_include_directories(test_multi_portfolio PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_multi_portfolio PRIVATE quant_backtester_lib)
add_test(NAME test_multi_portfolio COMMAND test_multi_portfolio)

add_executable(test_full_backtest integration/test_full_backtest.cpp)
target_include_directories(test_full_backtest PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_full_backtest PRIVATE quant_backtester_lib)
add_test(NAME test_full_backtest COMMAND test_full_backtest)

add_executable(test_donchian_strategy unit/test_donchian_strategy.cpp)
target_include_directories(test_donchian_strategy PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_donchian_strategy PRIVATE quant_backtester_lib)
add_test(NAME test_donchian_strategy COMMAND test_donchian_strategy)

add_executable(test_mean_reversion unit/test_mean_reversion.cpp)
target_include_directories(test_mean_reversion PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_mean_reversion PRIVATE quant_backtester_lib)
add_test(NAME test_mean_reversion COMMAND test_mean_reversion)

add_executable(test_walk_forward unit/test_walk_forward.cpp)
target_include_directories(test_walk_forward PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_walk_forward PRIVATE quant_backtester_lib)
add_test(NAME test_walk_forward COMMAND test_walk_forward)

add_executable(test_experiment_config unit/test_experiment_config.cpp)
target_include_directories(test_experiment_config PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_experiment_config PRIVATE quant_backtester_lib)
add_test(NAME test_experiment_config COMMAND test_experiment_config)

add_executable(test_replay_determinism integration/test_replay_determinism.cpp)
target_include_directories(test_replay_determinism PRIVATE ${CATCH2_INCLUDE_DIR})
target_link_libraries(test_replay_determinism PRIVATE quant_backtester_lib)
add_test(NAME test_replay_determinism COMMAND test_replay_determinism)
